--- a/static/index.html
+++ b/static/index.html
@@ -39,13 +39,13 @@
           <button id="inbox" class="button toggle current">inbox</button>
           <button id="today" class="button toggle">today</button>
           <button id="next" class="button toggle">next</button>
+          <div id="tags">
+          </div>
         </div>
         <div id="todos">
           <div id="todo-list" class="grid sortable"/>
         </div>
       </div>
-        <div id="tags">
-        </div>
       <div id="todo-stats"></div>
 
     </div>
@@ -69,7 +69,7 @@
       <div class="tag" id="home">
         <input type="checkbox" class="filter"/>
         <div class="tagname"></div>
-        <a href="javascript:0" class="new"><img class="new"/></a>
+        <a href="javascript:0" class="new"><div class="new"/></a>
       </div>
     </script>
 
